--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,9 @@
 {
-"window.zoomLevel": 2,
-  "editor.fontSize": 17,
+"window.zoomLevel": 0.5,
+  "editor.fontSize": 15,
   "python.languageServer": "Pylance", // ms-python.vscode-pylance
-  "python.testing.unittestEnabled": false, // ms-python.python
-  "python.testing.pytestEnabled": true,
+  "python.testing.unittestEnabled": true, // ms-python.python
+  "python.testing.pytestEnabled": false,
   "python.testing.pytestArgs": [], // -x to bail
   "python.linting.flake8Enabled": true,
   "python.linting.mypyEnabled": true,
@@ -57,5 +57,12 @@
     "django-html": "html", // batisteo.vscode-django
     "javascript": "javascriptreact",
     "typescript": "typescriptreact"
-  }
+  },
+  "python.testing.unittestArgs": [
+    "-v",
+    "-s",
+    "./recipes",
+    "-p",
+    "test*.py"
+  ]
 }
